--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -5,5 +5,6 @@ authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-
 nom = "^5.0.1"
+crc32fast = "^1.2.0"
+phf = { version = "^0.8.0", features = ["macros"] }
