--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -5,9 +5,10 @@ authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
 [features]
-std = ["nom/std", "crc32fast/std"]
+std = ["nom/std", "crc32fast/std", "compression/std"]
 
 [dependencies]
 nom = { version = "^5.0.1", default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 phf = { version = "^0.8.0", features = ["macros"], default-features = false }
+compression = { version = "^0.1", features = ["zlib"], default-features = false}
