--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -13,3 +13,4 @@ nom = { version = "^5.0.1", features = ["std"], default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 phf = { version = "^0.8.0", features = ["macros"], default-features = false }
 compression = { version = "^0.1", features = ["deflate"], default-features = false }
+byteorder = { version = "1.3.4" }
