Add tokio package, update features

--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -5,12 +5,13 @@ authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
 [features]
-std = ["nom/std", "crc32fast/std", "compression/std"]
+default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std"]
+std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio"]
 
 [dependencies]
-#nom = { version = "^5.0.1", features = ["alloc"], default-features = false }
-nom = { version = "^5.0.1", features = ["std"], default-features = false }
-crc32fast = { version = "^1.2.0", default-features = false }
-phf = { version = "^0.8.0", features = ["macros"], default-features = false }
-compression = { version = "^0.1", features = ["deflate"], default-features = false }
-byteorder = { version = "1.3.4" }
+nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
+crc32fast = { version = "^1.2.0", default-features = false, optional = true }
+phf = { version = "^0.8.0", features = ["macros"], default-features = false, optional = true }
+compression = { version = "^0.1", features = ["deflate"], default-features = false, optional = true }
+byteorder = { version = "^1.3.4", default-features = false, optional = true }
+tokio = { version = "^0.2.11", features = ["fs"], default-features = false, optional = true }
