--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 
 [features]
 default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std"]
-std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio"]
+std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait"]
 
 [dependencies]
 nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
@@ -14,4 +14,5 @@ crc32fast = { version = "^1.2.0", default-features = false, optional = true }
 phf = { version = "^0.8.0", features = ["macros"], default-features = false, optional = true }
 compression = { version = "^0.1", features = ["deflate"], default-features = false, optional = true }
 byteorder = { version = "^1.3.4", default-features = false, optional = true }
-tokio = { version = "^0.2.11", features = ["fs"], default-features = false, optional = true }
+tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded"], default-features = false, optional = true }
+async-trait = { version = "^0.1.24", default-features = false, optional = true }
