--- a/sqpack/Cargo.toml
+++ b/sqpack/Cargo.toml
@@ -5,8 +5,8 @@ authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
 [features]
-default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std"]
-std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait"]
+default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std", "bytes"]
+std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait", "reqwest/default-tls"]
 
 [dependencies]
 nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
@@ -16,3 +16,5 @@ compression = { version = "^0.1", features = ["deflate"], default-features = fal
 byteorder = { version = "^1.3.4", default-features = false, optional = true }
 tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded", "sync"], default-features = false, optional = true }
 async-trait = { version = "^0.1.24", default-features = false, optional = true }
+reqwest = { version = "^0.10", default-features = false, optional = true }
+bytes = { version = "^0.5", default-features = false, optional = true }
