--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -3,3 +3,7 @@ name = "renderer"
 version = "0.1.0"
 authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
+
+[dependencies]
+wgpu = { version = "^0.4", default-features = false }
+winit = { version = "^0.21", default-features = false }
