--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -41,6 +41,20 @@
       },
       "args": [],
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug integration test 'exl_test'",
+      "cargo": {
+        "args": ["test", "--no-run", "--test=exl_test"],
+        "filter": {
+          "name": "exl_test",
+          "kind": "test"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
