--- a/ffxiv/ffxiv-parser/Cargo.toml
+++ b/ffxiv/ffxiv-parser/Cargo.toml
@@ -10,3 +10,6 @@ std = ["sqpack/std"]
 
 [dependencies]
 sqpack = { version = "^0.1", default-features = false, optional = true, path = "../sqpack" }
+
+[dev-dependencies]
+tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
