--- a/ffxiv/sqpack/Cargo.toml
+++ b/ffxiv/sqpack/Cargo.toml
@@ -4,6 +4,9 @@ version = "0.1.0"
 authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
+[lib]
+doctest = false
+
 [features]
 default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std", "bytes", "num"]
 std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait", "reqwest/default-tls"]
