--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -8,11 +8,11 @@ edition = "2018"
 doctest = false
 
 [features]
-default = ["sqpack_reader"]
+default = []
 std = ["sqpack_reader/std"]
 
 [dependencies]
-sqpack_reader = { version = "^0.1", default-features = false, optional = true, path = "../sqpack_reader" }
+sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 
 [dev-dependencies]
 tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
