--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -8,18 +8,19 @@ edition = "2018"
 doctest = false
 
 [features]
-default = ["nom", "crc32fast", "phf", "compression", "byteorder", "std", "bytes", "num"]
+default = ["std"]
 std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait", "reqwest/default-tls"]
 test_local = ["default"]
 
 [dependencies]
-nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
-crc32fast = { version = "^1.2.0", default-features = false, optional = true }
-phf = { version = "^0.8.0", features = ["macros"], default-features = false, optional = true }
-compression = { version = "^0.1", features = ["deflate"], default-features = false, optional = true }
-byteorder = { version = "^1.3.4", default-features = false, optional = true }
+nom = { version = "^5.1", features = ["alloc"], default-features = false }
+crc32fast = { version = "^1.2.0", default-features = false }
+phf = { version = "^0.8.0", features = ["macros"], default-features = false }
+compression = { version = "^0.1", features = ["deflate"], default-features = false }
+bytes = { version = "^0.5", default-features = false }
+num = { version = "^0.2", default-features = false}
+
+byteorder = { version = "^1.3.4", default-features = false }
 tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded", "sync"], default-features = false, optional = true }
 async-trait = { version = "^0.1.24", default-features = false, optional = true }
 reqwest = { version = "^0.10", default-features = false, optional = true }
-bytes = { version = "^0.5", default-features = false, optional = true }
-num = { version = "^0.2", default-features = false, optional = true }
