--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = ["std"]
-std = ["nom/std", "crc32fast/std", "compression/std", "byteorder/std", "tokio", "async-trait", "reqwest/default-tls"]
+std = ["nom/std", "crc32fast/std", "compression/std", "tokio", "async-trait", "reqwest/default-tls"]
 test_local = ["default"]
 
 [dependencies]
@@ -20,7 +20,6 @@ compression = { version = "^0.1", features = ["deflate"], default-features = fal
 bytes = { version = "^0.5", default-features = false }
 num = { version = "^0.2", default-features = false}
 
-byteorder = { version = "^1.3.4", default-features = false }
 tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded", "sync"], default-features = false, optional = true }
 async-trait = { version = "^0.1.24", default-features = false, optional = true }
 reqwest = { version = "^0.10", default-features = false, optional = true }
