--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2018"
 
 [dependencies]
 tokio = { version = "^0.2.11", features = ["macros"], default-features = false }
-warp = { version = "^0.2.1", default-features = false }
+actix-web = { version = "^2.0", default-features = false }
+actix-rt = { version = "^1.0", default-features = false }
 dotenv = { version = "^0.15", default-features = false }
-ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv/ffxiv_parser" }
+ffxiv_parser = { version = "^0.1", features = ["std"], default-features = false, path = "../ffxiv/ffxiv_parser" }
