--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,3 +10,4 @@ actix-web = { version = "^2.0", default-features = false }
 actix-rt = { version = "^1.0", default-features = false }
 dotenv = { version = "^0.15", default-features = false }
 ffxiv_parser = { version = "^0.1", features = ["std"], default-features = false, path = "../ffxiv/ffxiv_parser" }
+sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../ffxiv/sqpack_reader"}
