--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -23,3 +23,6 @@ num = { version = "^0.2", default-features = false }
 tokio = { version = "^0.2.11", features = ["fs", "macros", "rt-threaded", "sync"], default-features = false, optional = true }
 async-trait = { version = "^0.1.24", default-features = false, optional = true }
 reqwest = { version = "^0.10", default-features = false, optional = true }
+
+[profile.release]
+panic = "abort"
