--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -10,3 +10,6 @@ doctest = false
 [dependencies]
 wgpu = { version = "^0.4", default-features = false }
 winit = { version = "^0.21", default-features = false }
+
+[profile.release]
+panic = "abort"
