--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -17,7 +17,7 @@ num-derive = { version = "^0.3", default-features = false }
 num-traits = { version = "^0.2", default-features = false }
 enum-map = { version = "^0.6", default-features = false }
 lazy_static = { version = "^1.4", features = ["spin_no_std"], default-features = false }
-bytes = { version = "^0.5", default-features = false }
+byteorder = { version = "^1.3", default-features = false }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 
 [dev-dependencies]
