--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -16,6 +16,7 @@ nom = { version = "^5.1", features = ["alloc"], default-features = false }
 num-derive = { version = "^0.3", default-features = false }
 num-traits = { version = "^0.2", default-features = false }
 enum-map = { version = "^0.6", default-features = false }
+futures = {version = "^0.3", features = ["alloc"], default-features = false }
 lazy_static = { version = "^1.4", features = ["spin_no_std"], default-features = false }
 byteorder = { version = "^1.3", default-features = false }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
