--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -23,3 +23,5 @@ sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_
 
 [dev-dependencies]
 tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
+pretty_env_logger = { version = "^0.4", default-features = false }
+log = { version = "^0.4", default-features = false }
