--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -14,10 +14,10 @@ test_local = ["default"]
 
 [dependencies]
 nom = { version = "^5.1", features = ["alloc"], default-features = false }
+byteorder = { version = "^1.3", default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 phf = { version = "^0.8.0", features = ["macros"], default-features = false }
 compression = { version = "^0.1", features = ["deflate"], default-features = false }
-bytes = { version = "^0.5", default-features = false }
 num = { version = "^0.2", default-features = false }
 log = { version = "^0.4", default-features = false }
 
