--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -14,6 +14,7 @@ test_local = ["default"]
 
 [dependencies]
 nom = { version = "^5.1", features = ["alloc"], default-features = false }
+futures = {version = "^0.3", features = ["alloc"], default-features = false }
 crc32fast = { version = "^1.2.0", default-features = false }
 compression = { version = "^0.1", features = ["deflate"], default-features = false }
 log = { version = "^0.4", default-features = false }
