--- a/ffxiv/sqpack_reader/Cargo.toml
+++ b/ffxiv/sqpack_reader/Cargo.toml
@@ -9,7 +9,7 @@ doctest = false
 
 [features]
 default = ["std"]
-std = ["nom/std", "crc32fast/std", "compression/std", "tokio", "reqwest/default-tls"]
+std = ["nom/std", "crc32fast/std", "compression/std", "tokio", "reqwest/default-tls", "util/std"]
 test_local = ["default"]
 
 [dependencies]
@@ -19,6 +19,7 @@ crc32fast = { version = "^1.2.0", default-features = false }
 compression = { version = "^0.1", features = ["deflate"], default-features = false }
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
+util = { version = "^0.1", default-features = false, path = "../../util" }
 
 tokio = { version = "^0.2.11", features = ["fs", "sync"], default-features = false, optional = true }
 reqwest = { version = "^0.10", default-features = false, optional = true }
