Copy and paste some wgpu basics

--- a/ffxiv/model_viewer/Cargo.toml
+++ b/ffxiv/model_viewer/Cargo.toml
@@ -18,5 +18,6 @@ wasm = []
 
 [dependencies]
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
+renderer = { version = "^0.1", default-features = false, path = "../../renderer" }
 
 winit = { version = "^0.22", default-features = false, optional = true }
