--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -9,3 +9,4 @@ doctest = false
 
 [dependencies]
 wgpu = { version = "^0.4", default-features = false }
+raw-window-handle = { version = "^0.3", default-features = false }
