--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -74,6 +74,20 @@
       },
       "args": [],
       "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug executable 'model_viewer'",
+      "cargo": {
+        "args": ["build", "--bin=model_viewer", "--package=model_viewer"],
+        "filter": {
+          "name": "model_viewer",
+          "kind": "bin"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
     }
   ]
 }
