--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -9,4 +9,7 @@ doctest = false
 
 [dependencies]
 wgpu = { version = "^0.4", default-features = false }
+cgmath = { version = "^0.17", default-features = false }
+glsl-to-spirv = { version = "^0.1", default-features = false }
+zerocopy = { version = "^0.3", default-features = false }
 raw-window-handle = { version = "^0.3", default-features = false }
