--- a/renderer/Cargo.toml
+++ b/renderer/Cargo.toml
@@ -10,6 +10,6 @@ doctest = false
 [dependencies]
 wgpu = { version = "^0.4", default-features = false }
 nalgebra = { version = "^0.20", default-features = false }
-glsl-to-spirv = { version = "^0.1", default-features = false }
+shaderc = { version = "^0.6", default-features = false }
 zerocopy = { version = "^0.3", default-features = false }
 raw-window-handle = { version = "^0.3", default-features = false }
