Split util and make slice_ext

--- a/ffxiv/model_viewer/Cargo.toml
+++ b/ffxiv/model_viewer/Cargo.toml
@@ -13,11 +13,12 @@ path = "src/main.rs"
 
 [features]
 default = ["binary"]
-binary = ["sqpack_reader/std", "winit"]
+binary = ["sqpack_reader/std", "ffxiv_parser/std", "winit"]
 wasm = []
 
 [dependencies]
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
+ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
 renderer = { version = "^0.1", default-features = false, path = "../../renderer" }
 
 winit = { version = "^0.22", default-features = false, optional = true }
