--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -5,5 +5,5 @@ authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-tokio = { version = "^0.2.11", features = ["macros"] }
-warp = { version = "^0.2.1" }
+tokio = { version = "^0.2.11", features = ["macros"], default-features = false }
+warp = { version = "^0.2.1", default-features = false }
