use dotenv, result

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2018"
 [dependencies]
 tokio = { version = "^0.2.11", features = ["macros"], default-features = false }
 warp = { version = "^0.2.1", default-features = false }
+dotenv = { version = "^0.15", default-features = false }
