--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -62,10 +62,11 @@ jobs:
           key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
           restore-keys: ${{ runner.os }}-node-
 
+      - name: install wasm-pack
+        run: cargo install wasm-pack
+
       - name: npm install
-        if: matrix.os == 'ubuntu-latest'
         run: npm install
 
       - name: npm run build
-        if: matrix.os == 'ubuntu-latest'
         run: npm run build
