--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -63,7 +63,9 @@ jobs:
           restore-keys: ${{ runner.os }}-node-
 
       - name: install wasm-pack
-        run: cargo install wasm-pack
+        uses: jetli/wasm-pack-action@v0.2.0
+        with:
+          version: "latest"
 
       - name: npm install
         run: npm install
