--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -22,3 +22,4 @@ nom = { version = "^5.1", features = ["alloc"], default-features = false, option
 [dev-dependencies]
 tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
+log = { version = "^0.4", default-features = false }
