Seperate context into a file and use only one context

--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -10,6 +10,7 @@ default = []
 [dependencies]
 itertools = { version = "^0.9", features = ["use_std"], default-features = false }
 log = { version = "^0.4", default-features = false }
+lazy_static = { version = "^1.4", default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
 actix-web = { version = "^2.0", default-features = false }
 actix-rt = { version = "^1.0", default-features = false }
