Change directory struct in dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,9 +1,9 @@
 FROM builder
 
-WORKDIR /build
-RUN cargo install --path server --locked --bins --root bin
+WORKDIR /src
+RUN cargo install --path server --locked --bins --root build
 
 FROM debian:buster-slim
-COPY --from=0 /build/bin /server
+COPY --from=0 /src/build /server
 
 CMD ["/server/bin/server"]
