Fix invalid docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
     image: dlunch/ffxivtools:builder
     build: .
   server:
-    build: dlunch/ffxivtools:server
+    image: dlunch/ffxivtools:server
+    build: server
     volumes:
       - ./data:/server/data
