--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -16,5 +16,6 @@ pretty_env_logger = { version = "^0.4", default-features = false }
 actix-web = { version = "^2.0", default-features = false }
 actix-rt = { version = "^1.0", default-features = false }
 serde_json = {version = "^1.0", default-features = false }
+serde = { version = "^1.0", default-features = false }
 ffxiv_parser = { version = "^0.1", features = ["std"], default-features = false, path = "../ffxiv/ffxiv_parser" }
 sqpack_reader = { version = "^0.1", features = ["std"], default-features = false, path = "../ffxiv/sqpack_reader"}
