--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,8 @@ log = { version = "^0.4", default-features = false }
 lazy_static = { version = "^1.4", default-features = false }
 pretty_env_logger = { version = "^0.4", default-features = false }
 actix-web = { version = "^2.0", default-features = false }
+genawaiter = { version = "^0.99", features = ["futures03"] }
+bytes = { version = "^0.5.4", default-features = false }
 actix-rt = { version = "^1.0", default-features = false }
 serde_json = {version = "^1.0", default-features = false }
 serde = { version = "^1.0", default-features = false }
