Use bytes instead of Vec<u8>

--- a/ffxiv/ffxiv_parser/Cargo.toml
+++ b/ffxiv/ffxiv_parser/Cargo.toml
@@ -13,6 +13,7 @@ std = ["sqpack_reader/std", "nom/std", "util/std"]
 
 [dependencies]
 futures = { version = "^0.3", features = ["alloc"], default-features = false }
+bytes = { version = "^0.5.4", default-features = false }
 serde = { version = "^1.0", default-features = false }
 serde_repr = { version = "^0.1", default-features = false }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
