--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -17,7 +17,7 @@ bytes = { version = "^0.5.4", default-features = false }
 serde = { version = "^1.0", default-features = false }
 serde_repr = { version = "^0.1", default-features = false }
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
-util = { version = "^0.1", default-features = false, path = "../../util" }
+util = { version = "^0.1", default-features = false, path = "../util" }
 
 nom = { version = "^5.1", features = ["alloc"], default-features = false, optional = true }
 
