--- a/libs/model_viewer/Cargo.toml
+++ b/libs/model_viewer/Cargo.toml
@@ -19,6 +19,6 @@ wasm = []
 [dependencies]
 sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
 ffxiv_parser = { version = "^0.1", default-features = false, path = "../ffxiv_parser" }
-renderer = { version = "^0.1", default-features = false, path = "../../renderer" }
+renderer = { version = "^0.1", default-features = false, path = "../renderer" }
 
 winit = { version = "^0.22", default-features = false, optional = true }
