--- a/libs/sqpack_reader/Cargo.toml
+++ b/libs/sqpack_reader/Cargo.toml
@@ -20,7 +20,7 @@ compression = { version = "^0.1", features = ["deflate"], default-features = fal
 log = { version = "^0.4", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 bytes = { version = "^0.5.4", default-features = false }
-util = { version = "^0.1", default-features = false, path = "../../util" }
+util = { version = "^0.1", default-features = false, path = "../util" }
 
 tokio = { version = "^0.2.11", features = ["fs", "sync"], default-features = false, optional = true }
 reqwest = { version = "^0.10", default-features = false, optional = true }
