--- a/utils/sqpack_extractor/Cargo.toml
+++ b/utils/sqpack_extractor/Cargo.toml
@@ -9,4 +9,4 @@ edition = "2018"
 [dependencies]
 clap = { version = "^2.33", default-features = false }
 tokio = { version = "^0.2.11", features = ["macros", "rt-threaded"], default-features = false }
-sqpack_reader = { version = "^0.1", default-features = false, path = "../sqpack_reader" }
+sqpack_reader = { version = "^0.1", default-features = false, path = "../../libs/sqpack_reader" }
