--- a/libs/ffxiv_renderer/Cargo.toml
+++ b/libs/ffxiv_renderer/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "model_viewer"
+name = "ffxiv_renderer"
 version = "0.1.0"
 authors = ["Inseok Lee <dlunch@gmail.com>"]
 edition = "2018"
@@ -8,7 +8,7 @@ edition = "2018"
 doctest = false
 
 [[bin]]
-name = "model_viewer"
+name = "ffxiv_renderer"
 path = "src/main.rs"
 
 [features]
