--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,12 +5,12 @@ members = [
     "libs/ffxiv_renderer",
     "libs/renderer",
     "libs/util",
-    "utils/sqpack_extractor",
-    "utils/ffxiv_renderer_standalone",
+    "tools/sqpack_extractor",
+    "tools/ffxiv_renderer_standalone",
     "server",
     "apps/model_viewer"
 ]
-default-members = ["utils/sqpack_extractor", "utils/ffxiv_renderer_standalone", "server", "apps/model_viewer"]
+default-members = ["tools/sqpack_extractor", "tools/ffxiv_renderer_standalone", "server", "apps/model_viewer"]
 
 [profile.release]
 panic = "abort"
