--- a/apps/model_viewer/Cargo.toml
+++ b/apps/model_viewer/Cargo.toml
@@ -15,7 +15,7 @@ wasm-bindgen = { version = "^0.2", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
-ffxiv_renderer = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_renderer" }
+# ffxiv_renderer = { version = "^0.1", default-features = false, path = "../../libs/ffxiv_renderer" }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "^0.3", default-features = false }
