Exclude std from default features

--- a/libs/ffxiv_parser/Cargo.toml
+++ b/libs/ffxiv_parser/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2018"
 doctest = false
 
 [features]
-default = ["std"]
+default = []
 std = ["sqpack_reader/std", "nom/std", "util/std"]
 
 [dependencies]
