--- a/pages/translation_compare/Cargo.toml
+++ b/pages/translation_compare/Cargo.toml
@@ -15,6 +15,7 @@ wasm-bindgen = { version = "^0.2", default-features = false }
 web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
+sqpack_reader = { version = "^0.1", path = "../../libs/sqpack_reader", default-features = false }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "^0.3", default-features = false }
