--- a/pages/translation_compare/Cargo.toml
+++ b/pages/translation_compare/Cargo.toml
@@ -16,6 +16,7 @@ web-sys = { version = "^0.3", features = ["console"], default-features = false }
 wee_alloc = { version = "^0.4", default-features = false }
 console_error_panic_hook = { version = "^0.1", default-features = false }
 sqpack_reader = { version = "^0.1", path = "../../libs/sqpack_reader", default-features = false }
+ffxiv_parser = { version = "^0.1", path = "../../libs/ffxiv_parser", default-features = false }
 
 [dev-dependencies]
 wasm-bindgen-test = { version = "^0.3", default-features = false }
