--- a/libs/util/Cargo.toml
+++ b/libs/util/Cargo.toml
@@ -12,6 +12,7 @@ default = []
 std = ["tokio", "bytes"]
 
 [dependencies]
+cfg-if = { version = "^0.1", default-features = false }
 async-trait = { version = "^0.1.24", default-features = false }
 
 bytes = { version = "^0.5.4", default-features = false, optional = true }
