--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,10 +1,6 @@
 FROM dlunch/ffxivtools:builder as builder
-
-WORKDIR /src
-RUN cargo install --path server --locked --bins --root build
-
 FROM debian:stretch-slim
-COPY --from=0 /src/build/bin /server
+COPY --from=builder /src/build/bin /server
 
 EXPOSE 8080
 WORKDIR "/server"
