[ci skip] use single dockerfile

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,4 +1,16 @@
-FROM dlunch/ffxivtools:builder as builder
+FROM dlunch/ffxivtools:builder as previous
+FROM rust:stretch as builder
+
+RUN apt-get update
+RUN apt-get install cmake -y
+
+WORKDIR /src
+COPY --from=previous /src /src
+COPY --from=previous /usr/local/cargo /usr/local/cargo
+COPY . .
+
+RUN cargo install --path server --locked --bins --root build
+
 FROM debian:stretch-slim
 COPY --from=builder /src/build/bin /server
 
