--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -6,7 +6,7 @@ on:
 name: Deploy netlify
 
 jobs:
-  gh-pages:
+  netlify:
     if: "!contains(github.event.head_commit.message, 'ci skip')"
     runs-on: ubuntu-latest
 
@@ -49,10 +49,10 @@ jobs:
       - name: npm run build
         run: npm run build
 
-       - name: Publish
-         uses: netlify/actions/cli@master
-          with:
-            args: deploy --dir=dist
-          env:
-            NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-            NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Publish
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=dist
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
