--- a/.github/workflows/netlify.yaml
+++ b/.github/workflows/netlify.yaml
@@ -17,13 +17,19 @@ jobs:
         uses: actions/cache@v1
         with:
           path: ~/.cargo/registry
-          key: ${{ runner.os }}-cargo-registry
+          key: ${{ runner.os }}-cargo-registry-${{ hashFiles('**/Cargo.lock') }}
 
-      - name: Cache rust dependencies
+      - name: Cache cargo index
+        uses: actions/cache@v1
+        with:
+          path: ~/.cargo/git
+          key: ${{ runner.os }}-cargo-index-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Cache cargo build
         uses: actions/cache@v1
         with:
           path: target
-          key: ${{ runner.os }}-wasm-rust-target
+          key: ${{ runner.os }}-{{ matrix.rust }}-wasm-cargo-build-target-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Cache .npm
         uses: actions/cache@v1
