--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -53,8 +53,8 @@ jobs:
       - name: npm install
         run: npm install
 
-      - name: npm run build
-        run: npm run build
+      - name: npm run build:release
+        run: npm run build:release
 
       - name: Deploy to Github Pages
         if: github.ref == 'refs/heads/master'
