--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
   "name": "ffxiv-tools",
   "version": "0.1.0",
   "scripts": {
-    "build": "webpack --config webpack/webpack.config.js",
-    "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.js"
+    "build:dev": "webpack --config webpack/webpack.config.dev.js",
+    "build:release": "webpack --config webpack/webpack.config.release.js",
+    "devserver": "webpack-dev-server --open -d --config webpack/webpack.config.dev.js"
   },
   "devDependencies": {
     "@wasm-tool/wasm-pack-plugin": "^1.1.0",
@@ -14,6 +15,7 @@
     "node-html-parser": "^1.2.14",
     "webpack": "^4.42.1",
     "webpack-cli": "^3.3.3",
-    "webpack-dev-server": "^3.7.1"
+    "webpack-dev-server": "^3.7.1",
+    "webpack-merge": "^4.2.2"
   }
 }
